--- a/deploy-sandbox.yaml
+++ b/deploy-sandbox.yaml
@@ -155,7 +155,8 @@ paths:
                       loyalty_currency_name: 'stamps'
                       prefix: null
                       suffix: 'stamps'
-                      value: 2
+                      current_value: 2
+                      target_value: 7
                     transactions:
                       - id: "100982384448"
                         timestamp: 1517549941
@@ -227,7 +228,8 @@ paths:
                       loyalty_currency_name: 
                       prefix: 
                       suffix: 
-                      value: 
+                      current_value: 
+                      target_value:
                     transactions:
                       []
                     vouchers:
@@ -243,11 +245,16 @@ paths:
                 payment_accounts:
                   - id: 555
                     provider: 'Visa'
+                    issuer: 'Lloyds'
                     status: 'active'
                     expiry_month: '12'
                     expiry_year: '24'
                     name_on_card: 'Jeff Jeffries'
                     card_nickname: 'My Visa'
+                    type: 'debit'
+                    currency_code: 'GBP'
+                    country: 'GB'
+                    last_four_digits: '1234'
                     images:
                       - id: 290
                         type: 0
@@ -325,7 +332,8 @@ paths:
                       loyalty_currency_name: 'stamps'
                       prefix: null
                       suffix: 'stamps'
-                      value: 2
+                      current_value: 2
+                      target_value: 7
                     transactions:
                       - id: "100982384448"
                         timestamp: 1517549941
@@ -468,7 +476,8 @@ paths:
                       loyalty_currency_name: 'stamps'
                       prefix: null
                       suffix: 'stamps'
-                      value: 2
+                      current_value: 2
+                      target_value: 7
                     card:
                       barcode: 
                       barcode_type: 0
@@ -492,6 +501,11 @@ paths:
                     balance:
                       updated_at: 1515697663
                       current_display_value: '£0'
+                      loyalty_currency_name: 'GBP'
+                      prefix: '£'
+                      suffix: 
+                      current_value: 0
+                      target_value: 
                     card:
                       barcode: "633174911234567890"
                       barcode_type: 0
@@ -499,13 +513,18 @@ paths:
                       colour: '#FFFFFF'
                       text_colour: '#FFFFFF'
                 payment_accounts:
-                  - id: 556
+                  - id: 555
                     provider: 'Visa'
+                    issuer: 'Lloyds'
                     status: 'active'
                     expiry_month: '12'
                     expiry_year: '24'
                     name_on_card: 'Jeff Jeffries'
                     card_nickname: 'My Visa'
+                    type: 'debit'
+                    currency_code: 'GBP'
+                    country: 'GB'
+                    last_four_digits: '1234'
                     images:
                       - id: 290
                         type: 0
@@ -2305,12 +2324,18 @@ components:
           minLength: 0
           maxLength: 50
           pattern: "[\\u0000-\\u2FFF]+"
-        value:
+        current_value:
+          type: number
+          example: 2
+          description: "Current value held on the given Loyalty Card."
+          minimum: 0
+          maximum: 9999999
+        target_value:
           type: number
           example: 7
           description: "Target spend value before gaining a reward."
           minimum: 0
-          maximum: 9999999
+          maximum: 999999
           
     Wallet:
       type: object
@@ -2606,6 +2631,34 @@ components:
           minLength: 1
           maxLength: 200
           pattern: "^[\\u0000-\\u2FFF]{1,200}$"
+        type: 
+          type: string
+          description: "Type of payment account. E.g. credit, debit etc."
+          example: "debit"
+          minLength: 1
+          maxLength: 40
+          pattern: "^[\\u0000-\u2FFF]{1,40}$"
+        currency_code:
+          type: string
+          description: "Currency code for the account in accordance with ISO 4217 Alpha-3."
+          example: "GBP"
+          minLength: 1
+          maxLength: 3
+          pattern: "^([A-Za-z]{3}|[0-9]{3})$"
+        country: 
+          type: string
+          description: "The country of origin of the payment account in accordance with ISO 3166-1 Alpha-2."
+          minLength: 1
+          maxLength: 40
+          pattern: "^[\\u0000-\u2FFF]{1,40}"
+        last_four_digits:
+          type: string
+          description: 'The last four digits of the PAN.'
+          example: "9876"
+          minLength: 4
+          maxLength: 4
+          pattern: "^[0-9]{4,4}$"
+
         images: 
           $ref: '#/components/schemas/Images'  
         pll_links:
@@ -2673,6 +2726,33 @@ components:
           minLength: 1
           maxLength: 200
           pattern: "^[\\u0000-\\u2FFF]{1,200}$"
+        type: 
+          type: string
+          description: "Type of payment account. E.g. credit, debit etc."
+          example: "debit"
+          minLength: 1
+          maxLength: 40
+          pattern: "^[\\u0000-\u2FFF]{1,40}$"
+        currency_code:
+          type: string
+          description: "Currency code for the account in accordance with ISO 4217 Alpha-3."
+          example: "GBP"
+          minLength: 1
+          maxLength: 3
+          pattern: "^([A-Za-z]{3}|[0-9]{3})$"
+        country: 
+          type: string
+          description: "The country of origin of the payment account in accordance with ISO 3166-1 Alpha-2."
+          minLength: 1
+          maxLength: 40
+          pattern: "^[\\u0000-\u2FFF]{1,40}"
+        last_four_digits:
+          type: string
+          description: 'The last four digits of the PAN.'
+          example: "9876"
+          minLength: 4
+          maxLength: 4
+          pattern: "^[0-9]{4,4}$"
         images: 
           $ref: '#/components/schemas/Images'           
 
@@ -3113,6 +3193,7 @@ components:
                 credential_slug: "card_number"
                 type: "text"
                 is_sensitive: false
+                is_scannable: false
                 choice: []
                 alternative:
               - order: 2
@@ -3122,6 +3203,7 @@ components:
                 credential_slug: "email"
                 type: "text"
                 is_sensitive: false
+                is_scannable: false
                 choice: []
                 alternative:
               - order: 3
@@ -3131,6 +3213,7 @@ components:
                 credential_slug: "password"
                 type: "text"
                 is_sensitive: true
+                is_scannable: false
                 choice: []
                 alternative:
               - order: 4
@@ -3139,6 +3222,7 @@ components:
                 credential_slug: "title"
                 type: "choice"
                 is_sensitive: false
+                is_scannable: false
                 choice:
                   - Mr
                   - Mrs
@@ -3157,6 +3241,7 @@ components:
                 credential_slug: "first_name"
                 type: "string"
                 is_sensitive: false
+                is_scannable: false
                 choice: []
                 alternative:
               - order: 6
@@ -3165,6 +3250,7 @@ components:
                 credential_slug: "last_name"
                 type: "string"
                 is_sensitive: false
+                is_scannable: false
                 choice: []
                 alternative:
               plan_documents:
@@ -3191,6 +3277,7 @@ components:
                 credential_slug: "email"
                 type: "text"
                 is_sensitive: false
+                is_scannable: false
                 choice: []
                 alternative:
               - order: 2
@@ -3200,6 +3287,7 @@ components:
                 credential_slug: "password"
                 type: "text"
                 is_sensitive: true
+                is_scannable: false
                 choice: []
                 alternative:
               - order: 3
@@ -3208,6 +3296,7 @@ components:
                 credential_slug: "title"
                 type: "choice"
                 is_sensitive: false
+                is_scannable: false
                 choice:
                   - Mr
                   - Mrs
@@ -3226,6 +3315,7 @@ components:
                 credential_slug: "first_name"
                 type: "string"
                 is_sensitive: false
+                is_scannable: false
                 choice: []
                 alternative:
               - order: 5
@@ -3234,6 +3324,7 @@ components:
                 credential_slug: "last_name"
                 type: "string"
                 is_sensitive: false
+                is_scannable: false
                 choice: []
                 alternative:
               plan_documents:
@@ -3259,6 +3350,7 @@ components:
                 credential_slug: "barcode"
                 type: "text"
                 is_sensitive: false
+                is_scannable: true
                 choice: []
                 alternative:
                   order: 1
@@ -3268,6 +3360,7 @@ components:
                   credential_slug: "card_number"
                   type: "text"
                   is_sensitive: false
+                  is_scannable: false
                   choice: []
               plan_documents:
               -
@@ -3286,6 +3379,7 @@ components:
                 credential_slug: "password"
                 type: "text"
                 is_sensitive: true
+                is_scannable: false
                 choice: []
                 alternative:
               plan_documents:
@@ -3367,6 +3461,9 @@ components:
         is_sensitive:
           type: boolean
           description: "Indicates whether or not this field is sensitive and therefore requires special UI controls. For example a Password field."
+        is_scannable:
+          type: boolean
+          description: "Indicates whether or not this field can be scanned for input, such as a barcode"
         choice:
           type: array
           description: "A list of possible values to be presented to the user when the type = choice."
